--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ var/
 # Developer environment
 .vagrant
 *.wpr
+local_settings.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
